<resources>
    <string name="app_name">EventClub</string>
    <string name="txt_welcome">Bienvenido</string>
    <string name="txt_welcome_msj">Descubre y gestiona eventos inolvidables de forma sencilla</string>
    <string name="txtBttnComenzar">Comenzar</string>
    <string name="title_activity_bienvenida">activity_bienvenida</string>
    <string name="navbar_txt">EventClub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_editdatos">Modificar datos</string>
    <string name="txt_edithint_name">Nombres</string>
    <string name="txt_edithint_lastname">Apellidos</string>
    <string name="txt_edithint_celular">Celular</string>
    <string name="txt_edithint_typedocument">Tipo de documento</string>
    <string name="txt_edithint_document">Número de documento</string>
    <string name="txt_edithint_birhtday">Fecha de nacimiento</string>
    <string name="txt_edithint_ordenbirthday">DD/MM/AAAA</string>
    <string name="change_correo">Cambiar Correo</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="btn_save">Confirmar</string>
    <string name="txt_change_correo">Dirección de correo electrónico nueva</string>
    <string name="txt_correoactual_editdatos">Dirección de correo electrónico actual</string>
    <string name="tv_changecorreo">Cambiar correo electrónico</string>
    <string name="tv_birthday">Fecha de nacimiento</string>"
    <string name="txt_pedir_comidas">Pedir Comidas</string>
    <string name="txt_kfc">KFC</string>
    <string name="txt_mcdonalds">McDonald\'s</string>
    <string name="txt_el_corral">El Corral</string>
    <string name="txt_pollo_frisby">Pollo Frisby</string>
    <string name="txt_lastdescription_comidas">Da click para escanear el menú de tú comida favorita</string>
    <string name="txt_description_Noasitance">Registro de asistencia fallido, lo sentimos pero no encontramos su ticket</string>
    <string name="txt_retry">Volver a intentar</string>
    <string name="volver">Volver</string>
    <string name="txt_asistance_exitosa">Registro de asistencia exitoso</string>
    <string name="correo_o_usuario">Correo o usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar_como_usuario">Ingresar como usuario</string>
    <string name="ingresar_como_anfitrion">Ingresar como anfitrion</string>
    <string name="ingresar_con_google">Ingresar con Google</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta Registrate?</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ingresa_con_huella">Ingresa con huella</string>
    <string name="comenzar">Comenzar</string>
    <string name="txt_consult_event">Consultar evento</string>
    <string name="txt_nameevent_consultevent">Nombre del evento</string>
    <string name="txt_consultevent_description">A continuación encontraras la información relacionada al evento</string>
    <string name="txt_consultevent_descriptionbox">Descrpción del evento</string>
    <string name="txt_consultevent_datetime">Fecha y hora del evento</string>
    <string name="txt_vonsultevent_ideventbox">ID del evento</string>
    <string name="txt_btn_localizarevent">Localizar\nEvento</string>
    <string name="txt_btneditevent">Editar\nEvento</string>
    <string name="txt_btn_deleteevent">Eliminar\nEvento</string>

    <string name="TxtBieUsuAdm">Bienvenido Administrador</string>
    <string name="TxtQDRealizarhoy">¿Qué desea realizar hoy?</string>
    <string name="TxtRegAsistencia">Registrar asistencia</string>
    <string name="TxtConEvento">Consultar evento</string>
    <string name="TxtAgrEvento">Agregar evento</string>
    <string name="TxtEdtEvento">Editar evento</string>
    <string name="TxtLocEvento">Localizar evento</string>
    <string name="txt_consultevent_localidad">Localidad - zona</string>
    <string name="txt_consultevent_chair">Piso - Silla</string>
    <string name="txt_consultevent_date">Fecha del evento</string>
    <string name="txt_name_event">Nombre del evento</string>
    <string name="txt_evvent_description">Descrpción del evento</string>
    <string name="txt_event_hour">Hora del evento</string>
    <string name="txt_event_place">Lugar del evento</string>
    <string name="creatorsOfTheApp">Jeronimo Tapias - Carlos Peña - Camila Murcia</string>
    <string name="txt_add_event">Agregar Evento</string>
    <string name="txt_addevent_exitosa_description">¡Perfecto, ya haz registrado tú evento, ahora podras consultarlo en breve junto a su respectivo ID y código QR!</string>
    <string name="txt_wrongadd_eventdescription">¡Error, no se pudo registrar tu evento!</string>
    <string name="txt_btn_agenda">Agenda</string>
    <string name="txt_consulEvent">Consultar\nEvento</string>
    <string name="txt_want_food">Pedir\nComida</string>
    <string name="txt_menuuser_description">Servicios de acceso rapido</string>
    <string name="txt_advertisement_event">¡No te lo pierdas!</string>
    <string name="txt_date_ej">20 junio</string>
    <string name="txt_date_ej2">22 marzo</string>
    <string name="txt_event_theater">Teatro</string>
    <string name="txt_event_concert">Concierto</string>
    <string name="txt_descriptionvenet_mainuser">A continuación podra encontrar sus porximos\neventos</string>
    <string name="txt_welcome_mainuser">Bienvenido Usuario</string>
    <string name="datos_del_usuario">Datos del usuario</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="genero">Genero</string>
    <string name="tipo_de_documento">Tipo de documento</string>
    <string name="numero_de_documento">Numero de documento</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="siguiente">Siguiente</string>
    <string name="celular">Celular</string>
    <string name="correo">Correo</string>
    <string name="ciudad_de_residencia">Ciudad de Residencia</string>
    <string name="localidad">Localidad</string>
    <string name="barrio">Barrio</string>
    <string name="direcci_n">Direcciòn</string>
    <string name="siguiente2">Siguiente</string>
    <string name="datos_de_ubicacion_del_usuario">Datos de ubicacion del usuario</string>
    <string name="titulocontrase_a">Contraseña</string>
    <string name="contrase_ausu">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="siguiente3">Crear Ususario</string>
    <string name="acepta_los_t_rminos_y_condiciones">¿Acepta los términos y condiciones?</string>
    <string name="usuario_creado_exitosamente">Usuario creado exitosamente</string>
    <string name="volver_login">Ingresar</string>
    <string name="recupera_tu_contrase_a">Recupera Tu Contraseña</string>
    <string name="correo_electronico_RecContra">Correo electronico</string>
    <string name="correoElectr_RecCuenta_Info">Diligencia el correo registrado para EventClub</string>
    <string name="enviar_codigo">Enviar Codigo</string>
    <string name="ingresa_el_codigo_de_confirmacion">Ingresa el codigo de recuperacion</string>
    <string name="DescripCodigoCofir_CambiContra">Se te enviara un codigo de confirmacon a tu corre, por favor digitalo para continuar</string>
    <string name="CambioContra_RequisitosContra">Entre 8 a 15 caracteres, que contenga(Mayusculas, minusculas, min 1 caracter especial, min 1 numero)</string>
    <string name="contrase_a_nueva">Contraseña Nueva</string>
    <string name="btncambiar_contrase_a">Cambiar Contraseña</string>
    <string name="Contra_guardada_exito">Contraseña guardada exitosamente</string>
    <string name="Error_Cambio_Contra">La contraseña no cumple con los parametros, por favor intente nuevamente</string>
    <string name="btnrecuperar_contrase_a">Recuperar Contraseña</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="inicio">Inicio</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="InvitacionPromocional">Consulta los eventos disponibles en los próximos 30 días y adquiere tus entradas a través de la página web oficial o de manera presencial en los puntos autorizados de cada evento.</string>
    <string name="eventos_pr_ximos">Eventos próximos</string>
    <string name="bogot">Bogotá</string>
    <string name="btningresar">Ingresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="comidas">Comidas</string>
    <string name="gestion_anfitrion">Gestion anfitrion</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="editar_datos">Editar datos</string>
    <string name="perfil_de_usuario">Perfil de usuario</string>
    <string name="perfil">Perfil de usuario</string>
    <string name="navigation_drawer_open">menu_abierto</string>
    <string name="navigation_drawer_close">menu_cerrado</string>
    <string name="home">Home</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_perfil_de_usuario">Editar Perfil de usuario</string>
    <string name="datos_de_ubicacion">Datos de ubicacion</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="registro_de_asistencia">Registro de asistencia</string>
    <string name="consultar_evento">Consultar Evento</string>
    <string name="agregar_evento">Agregar Evento</string>
    <string name="editar_evento">Editar Evento</string>
    <string name="localizar_evento">Localizar Evento</string>
    <string name="pedidos_pendientes">Pedidos Pendientes</string>
    <string name="pedidos_entregados">Pedidos Entregados</string>
    <string name="bienvenido_administrador">Bienvenido Administrador</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="agregar">Agregar</string>
    <string name="bienvenido_anfitrion">Bienvenido Anfitrion</string>
    <string name="gestion_administrador">Gestion Administrador</string>
    <string name="no_hay_pedidos_pendientes">No hay pedidos pendientes</string>
    <string name="perfecto_ya_haz_registrado_t_evento_ahora_podras_consultarlo_en_breve_junto_a_su_respectivo_id_y_c_digo_qr">¡Perfecto, ya haz registrado tú evento, ahora podras consultarlo en breve junto a su respectivo ID y código QR!</string>
    <string name="nombre_del_evento">Nombre del evento...</string>
    <string name="buscar_evento_por_nombre">Buscar evento por nombre</string>
    <string name="consultar">Consultar</string>

</resources>