<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_opaco"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".vista_usuario.main.usuarios.fragment_configUser">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_editdatos"
            android:textColor="@color/navbar_background"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/et_nombres"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:hint="@string/txt_edithint_name"
            android:textColorHint="@color/navbar_background"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_apellidos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:hint="@string/txt_edithint_lastname"
            android:textColorHint="@color/navbar_background"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_celular"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:hint="@string/txt_edithint_celular"
            android:textColorHint="@color/navbar_background"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_edithint_typedocument"
            android:textColor="@color/navbar_background" />

        <Spinner
            android:id="@+id/sp_tipo_documento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt" />

        <EditText
            android:id="@+id/et_documento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:hint="@string/txt_edithint_birhtday"
            android:textColorHint="@color/navbar_background"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:focusable="false"
            android:hint="@string/txt_edithint_ordenbirthday"
            android:textColorHint="@color/navbar_background"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:weightSum="2">

            <Button
                android:id="@+id/change_correo"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginEnd="20dp"
                android:text="@string/change_correo"
                android:textColor="@color/navbar_background"
                android:background="@drawable/style_buttons"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/change_password"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:text="@string/change_password"
                android:textColor="@color/navbar_background"
                android:background="@drawable/style_buttons"
                app:backgroundTint="@null" />
        </LinearLayout>

        <Button
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:text="@string/btn_save"
            android:textColor="@color/navbar_background"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_buttons"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>