<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_opaco">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <!-- LOGO -->
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/logo"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/tituloDatosUsus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_del_usuario"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres"
                android:layout_marginTop="30sp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPersonName" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/apellidos"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPersonName" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/edad"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="number" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/genero"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spTipoDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/tipo_de_documento"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/numero_de_documento"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="number" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/fecha_de_nacimiento"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:focusable="false" />

            <!-- BOTÓN SIGUIENTE -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSiguiente"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:textColor="@color/navbar_background"
                android:fontFamily="serif"
                android:textSize="18sp"
                android:textStyle="bold"
                app:strokeColor="@color/navbar_background"
                app:strokeWidth="3dp"
                android:text="@string/siguiente"
                android:layout_marginTop="24dp"
                app:cornerRadius="24dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
