<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".vista_usuario.main.usuarios.fragment_changePassword"
    android:background="@drawable/fondo_opaco">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_changecorreo"
        android:textColor="@color/navbar_background"
        android:textSize="28sp"
        android:textStyle="bold|italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/style_edit_txt"
        android:hint="@string/txt_correoactual_editdatos"
        android:textColorHint="@color/navbar_background"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/style_edit_txt"
        android:hint="@string/txt_change_correo"
        android:textColorHint="@color/navbar_background" />

    <Button
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:text="@string/btn_save"
        android:textColor="@color/navbar_background"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_buttons"
        app:backgroundTint="@null" />
</LinearLayout>