<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_opaco"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".vista_usuario.main.usuarios.fragment_configUser">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_editdatos"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/et_nombres"
            android:background="@drawable/style_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:hint="@string/txt_edithint_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/et_apellidos"
            android:hint="@string/txt_edithint_lastname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/et_celular"
            android:hint="@string/txt_edithint_celular"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_edithint_typedocument"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/sp_tipo_documento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt" />

        <EditText
            android:id="@+id/et_documento"
            android:hint="@string/txt_edithint_birhtday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_txt"
            android:focusable="false"
            android:hint="@string/txt_edithint_ordenbirthday"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>