<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_opaco">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <!-- LOGO -->
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/tituloDatosUsusLoca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_de_ubicacion_del_usuario"
                android:textStyle="bold"
                android:textColor="@color/navbar_background"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular"
                android:layout_marginTop="30sp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:inputType="phone" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/correo"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:inputType="textEmailAddress" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCiudadResi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/ciudad_de_residencia"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/localidad"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBarrio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/barrio"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/direcci_n"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:inputType="text" />

            <!-- BOTÓN SIGUIENTE -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSiguiente2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:textColor="@color/navbar_background"
                android:fontFamily="serif"
                android:textSize="18sp"
                android:textStyle="bold"
                app:strokeColor="@color/navbar_background"
                app:strokeWidth="3dp"
                android:text="@string/siguiente2"
                android:layout_marginTop="24dp"
                app:cornerRadius="24dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>